# shortest-url

./: .env  .envrc.sample  Cargo.toml  README.md  nginx.conf  settings.yaml  sqlx-data.json  start.sh
backend/: Cargo.toml  settings.yaml  sqlx-data.json
backend-2/: .env  Cargo.toml
backend-2/src/: config.rs  health_checks.rs  http.rs  lib.rs  main.rs
backend/scripts/: build-static.sh  start-database.sh
backend/src/: base62.rs  http.rs  lib.rs  logging.rs  main.rs
backend/src/database/: urls.rs
backend/tests/: urls.rs
database/migrations/: 20210620000018_create_urls_table.sql
frontend/src/: App.tsx  ShortUrl.tsx  UrlForm.tsx  api.ts  index.css
logs/: shortest-url.log.2021-06-11  shortest-url.log.2021-06-12  shortest-url.log.2021-06-14  shortest-url.log.2021-06-16  shortest-url.log.2021-06-19  shortest-url.log.2021-06-20  shortest-url.log.2021-06-22
src/: actions.rs  base62.rs  database.rs  http.rs  lib.rs  settings.rs
tests/: health_check.rs
tests/common/: mod.rs
web-client/public/: index.html
web-client/src/: App.tsx  ShortUrl.tsx  UrlForm.tsx  api.ts
web-server/: Cargo.toml
web-server/src/: base62.rs  config.rs  health_checks.rs  http.rs  lib.rs  logging.rs  main.rs  urls.rs
