[package]
name = "shortest-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = "0.5.6"
config = "0.13.1"
dotenvy = "0.15.1"
http = "0.2.7"
hyper = { version = "0.14.18", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.18.2", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["trace"] }
tracing = {version = "0.1.34", features = ["log", "attributes"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
