[package]
name = "shortest-url"
version = "0.1.0"
authors = ["David Burkett <david@davidburkett.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11.0"
http = "0.2.4"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = { version = "1.0.126", features = ["derive"] }
sqlx = { version = "0.5.5", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "offline",
] }
tokio = { version = "1.6.2", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.26", features = ["log"] }
tracing-appender = "0.1.2"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2.18", features = [
  "registry",
  "env-filter",
  "json",
  "ansi",
  "fmt",
] }
warp = "0.3.1"
uuid = { version = "0.8.2", features = ['v4'] }

[dev-dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
sqlx = { version = "0.5.5", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "offline",
  "migrate",
] }
