[package]
name = "shortest-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = "0.5.6"
envy = "0.4.2"
http = "0.2.7"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
serde = { version = "1.0.137", features = ["derive"] }
sqlx = { version = "0.5.13", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "offline"] }
tokio = { version = "1.18.2", features = ["full"] }
tower-http = { version = "0.3.3", features = ["trace"] }
tracing = {version = "0.1.34", features = ["attributes"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
uuid = { version = "1.1.0", features = ["v4"] }
